fix display on smaller screens
Fixes #4, h.t. @soldeace.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,7 +196,6 @@ header {
   background: #ffffff;
   border-left: 1px solid rgba(0, 0, 0, 0.05);
   display: inline-block;
-  width: 625px;
   max-width: 625px;
   height: 100% !important;
   max-height: 100%;
